test/libsolidity/syntaxTests/events/function_event_in_contract_clash.sol
contract A {
    event dup();
    function dup() public returns (uint) {
        return 1;
    }
}
// ----
// DeclarationError 2333: (34-96): Identifier already declared.
